[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0" # 高效处理网络 buffer 的库
prost = "0.9.0"  # 处理 protobuf 的代码
tracing = "0.1.31" # 日志处理

[dev-dependencies]
anyhow = "1.0.54" # 错误处理
async-prost = "0.2.1" # 支持把 protobuf 封装成 TCP frame
futures = "0.3" # 提供stream trait
tokio = { version = "1", futures = ["rt", "rt-multi-thread", "io-util", "macros", "net"] }
tracing-subscriber = "0.2" # 日志处理

[build-dependencies]
prost-build = "0.8"
